<resources>
    <string name="app_name">My Application</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_first_name">FirstName</string>
    <string name="prompt_last_name">LastName</string>
    <string name="prompt_dob">DateOfBirth (yyyy-mm-dd)</string>
    <string name="prompt_mobile">Mobile_Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="txtGoogle"><a href="http://www.google.com">Google</a></string>
    <string name="txtYahoo"><a href="http://www.yahoo.com">Yahoo</a></string>
    <string name="txtGmail"><a href="http://www.gmail.com">Gmail</a></string>
    <string name="txtWiki"><a href="http://www.wikipedia.org">Wiki</a></string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
