<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">



              <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtGoogle"
                android:id="@+id/infoTxtGoogle"
                android:onClick="LaunchGoogleWebView"
                android:textSize="25sp"
                  android:paddingLeft="80dp"
                  android:paddingRight="80dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtYahoo"
                android:id="@+id/infoTxtYahoo"
                android:onClick="LaunchYahooWebView"
                android:textSize="25sp"
                android:paddingLeft="85dp"
                android:paddingRight="85dp"
             />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtGmail"
                android:id="@+id/infoTxtGmail"
                android:onClick="LaunchGmailWebView"
                android:textSize="25sp"
                android:paddingLeft="90dp"
                android:paddingRight="90dp"
               />

             <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtWiki"
                android:id="@+id/infoTxtWiki"
                android:onClick="LaunchWikiWebView"
                android:textSize="25sp"
                 android:paddingLeft="100dp"
                 android:paddingRight="100dp"
               />


            <WebView
                android:id="@+id/webView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />



</LinearLayout>